Add SD card emulation

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -217,6 +217,7 @@ BEGIN
     CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,140,114,8
     CONTROL         "Force internal avi capture",IDC_FORCEINTERNAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,150,114,8
     GROUPBOX        "UI",IDC_STATIC,6,78,216,42
+    CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,176,96,10
 END
 
 IDD_OTHER_OPTIONS_DIALOG DIALOGEX 0, 0, 231, 273
