Fix allow_suspicious_rom_loading saving, clean up configdialog.c helpers, remove some translation functions, fix rombrowser flicker when rebuilding

--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -148,6 +148,7 @@
         <ClInclude Include="..\..\main\ffmpeg_capture\ffmpeg_capture.hpp"/>
         <ClInclude Include="..\..\main\guifuncs.h"/>
         <ClInclude Include="..\..\main\helpers\io_helpers.h"/>
+        <ClInclude Include="..\..\main\helpers\win_helpers.h" />
         <ClInclude Include="..\..\main\ioapi.h">
             <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
         </ClInclude>
