--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -237,7 +237,7 @@ BEGIN
 END
 
 IDD_LUAWINDOW DIALOGEX 0, 0, 240, 166
-STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | WS_VISIBLE | WS_OVERLAPPEDWINDOW
 CAPTION "LUA Instance"
 FONT 8, "Ms Shell Dlg", 0, 0, 0x1
 BEGIN
